# opwer

./: .gitignore  README.md  default.nix  opwer.cabal  references.md  stack.yaml  use-cases.md
app/: opwer-export-data.hs  opwer-fetch-details-by-id.hs  opwer-fetch-details.hs  opwer-format-results.hs  opwer-format.hs  opwer-get-a-bunch-of-job-details.hs  opwer-get-categories.hs  opwer-init.hs  opwer-search-and-fetch-one-thousand.hs  opwer-search-and-fetch.hs  opwer-search-raw.hs  opwer-search.hs
doc/: initialisation.md
src/: Lib.hs  Opwer.hs
test/: Spec.hs
