name:                opwer
version:             0.1.0.5
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/opwer#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Opwer
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       upwork,
                       authenticate-oauth
  default-language:    Haskell2010

executable opwer-init
  hs-source-dirs:      app
  main-is:             opwer-init.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       opwer,
                       upwork,
                       bytestring
  default-language:    Haskell2010

executable opwer-search
  hs-source-dirs:      app
  main-is:             opwer-search.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       opwer,
                       authenticate-oauth,
                       upwork
  default-language:    Haskell2010

executable opwer-fetch-details
  hs-source-dirs:      app
  main-is:             opwer-fetch-details.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       opwer,
                       authenticate-oauth,
                       upwork,
                       aeson,
                       bytestring
  default-language:    Haskell2010

test-suite opwer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , opwer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/opwer
